# Recipe_bot_template

./: .fake.env  .flake8  Dockerfile  LICENSE  Makefile  README.md  default_recipes_starter.py  docker-compose.yaml  entry.sh  main.py  pyproject.toml  requirements.txt
bot/: loader.py
bot/exceptions/: base.py  bot_exceptions.py  database_exceptions.py  settings_exceptions.py  unexpected_exceptions.py
bot/handlers/: handlers.py
database/: dao.py  schemas.py
default_datasets/: ingredients.csv  recipes.txt
exceptions/: bot_exceptions.py  settings_exceptions.py  unexpected_exceptions.py
recipes/: ingredient.py  recipe.py
settings/: settings.py
static/images/: default_recipe.avif
tests/: conftest.py  constants.py
tests/unit_tests/: test_mongodao_deleter.py  test_mongodao_reader.py  test_mongodao_updater.py  test_mongodao_writer.py
utils/: constants.py  datasets.py  logger.py  recipe.py
