[tool.poetry]
name = "recipe-bot"
version = "0.1.0"
description = ""
authors = ["practicesavedtheworld"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.3.0"
motor = "^3.3.2"
pydantic-settings = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
