[tool.poetry]
name = "recipe-bot"
version = "0.1.0"
description = ""
authors = ["practicesavedtheworld"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.3.0"
motor = "^3.3.2"
pydantic-settings = "^2.1.0"
pyproject-toml = "^0.0.10"
pytest-asyncio = "^0.23.4"


[tool.poetry.group.dev-dependencies.dependencies]
ruff = "^0.1.15"
black = "^24.1.1"
flake8 = "^7.0.0"
isort = "^5.13.2"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.flake8]
exclude = [
    'venv/*',
    'alembic/*',
    '.my*'
]

[tool.mypy]
python_version = "3.12"
warn_no_return = false
warn_unused_configs = true


